--- a/changelog.html
+++ b/changelog.html
@@ -8,6 +8,57 @@
   </head>
   
   <body>
+
+    <h3>0.7</h3>
+
+    <h4>New design for song editor</h4>
+    <ul>
+      <li>graphical editor for songs metadata</li>
+      <li>diagrams editor</li>
+      <li>drag'n drop for covers</li>
+      <li>support chords transposition</li>
+      <li>highlight environments</li>
+      <li>add spellchecking support</li>
+      <li>add find/replace dialog</li>
+      <li>autocompletion for macros</li>
+    </ul>
+
+    <h4>Misc</h4>
+    <ul>
+      <li>progress bars can be interrupted</li>
+      <li>display download speed and transferred bytes when downloading the library</li>
+      <li>PPA for Ubuntu</li>
+    </ul>
+
+    <h3>0.6</h3>
+
+    <h4>Appearance</h4>
+    <ul>
+      <li>redesign the song library</li>
+      <li>move song and songbook panels into preferences</li>
+      <li>new checkbox mechanism for song selection</li>
+      <li>new tab in preferences dialog for song editor options</li>
+    </ul>
+
+    <h4>Performances</h4>
+    <ul>
+      <li>remove qt's deprecated filesystem watcher for performance and stability</li>
+      <li>remove the sqlite database that was storing the library</li>
+      <li>delay the initialisation of the library after the startup of the application</li>
+    </ul>
+
+    <h4>Misc</h4>
+    <ul>
+      <li>new cmake toolchain</li>
+      <li>debian packaging with git-buildpackage</li>
+      <li>restore state for file dialogs</li>
+      <li>rename dialogs according to their triggering action</li>
+      <li>monospace font for song editors</li>
+      <li>new icon set for MacOs</li>
+      <li>allow custom commands for make/clean process</li>
+      <li>new dialog for clean/cleanall operations</li>
+    </ul>
+
     <h3>0.5</h3>
     
     <h4>Cross-platform</h4>
