Final Songbook-Client -> Patagui switch
Apart from a couple of details and a strange windows icon bug, the
thing works.

--- a/macos_specific/sparkle/appcast/index.html
+++ b/macos_specific/sparkle/appcast/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
     <head>
-        <title>Téléchargment Songbook-Client</title>
+        <title>Téléchargment Patagui</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" media="screen" type="text/css" title="Design" href="css/style.css" />
     </head>
     <body>
-        <h1>Appcast Songbook-Client</h1>
-        <p>Ceci est la page d'appcasting pour Songbook-Client version Mac, version de développement. l'hébergement sur cette page n'est que temporaire, le temps de l'intégration des flus de mise à jours avec les flux classique du site. Pour télécharger la dernière version stable, rendez vous ici <a href="http://www.patacrep.com/">ici</a>. </p>
+        <h1>Appcast Patagui</h1>
+        <p>Ceci est la page d'appcasting pour Patagui version Mac, version de développement. l'hébergement sur cette page n'est que temporaire, le temps de l'intégration des flus de mise à jours avec les flux classique du site. Pour télécharger la dernière version stable, rendez vous ici <a href="http://www.patacrep.com/">ici</a>. </p>
     </body>
 </html>
