--- a/changelog.html
+++ b/changelog.html
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>
-      Songbook-Client changelog
+      Patagui changelog
     </title>
   </head>
-  
+
   <body>
 
     <h3>0.7</h3>
@@ -60,7 +60,7 @@
     </ul>
 
     <h3>0.5</h3>
-    
+
     <h4>Cross-platform</h4>
     <ul>
       <li><strong>Windows:</strong> initial support. Note that a LaTeX distribution and a Python installation is required to produce pdf</li>
