update patacrep.com to patacrep.fr

--- a/macos_specific/sparkle/appcast/index.html
+++ b/macos_specific/sparkle/appcast/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>Appcast Patagui</h1>
-        <p>Ceci est la page d'appcasting pour Patagui version Mac, version de développement. l'hébergement sur cette page n'est que temporaire, le temps de l'intégration des flus de mise à jours avec les flux classique du site. Pour télécharger la dernière version stable, rendez vous ici <a href="http://www.patacrep.com/">ici</a>. </p>
+        <p>Ceci est la page d'appcasting pour Patagui version Mac, version de développement. l'hébergement sur cette page n'est que temporaire, le temps de l'intégration des flus de mise à jours avec les flux classique du site. Pour télécharger la dernière version stable, rendez vous ici <a href="http://www.patacrep.fr/">ici</a>. </p>
     </body>
 </html>
